--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "This is a simple package that emulates coin flips in several different ways.",
   "main": "flip.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "flip": "node flip.js",
     "flips": "node flips.js",
-    "guess": "node guess-flip.js"
+    "guess": "node guess-flip.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
